workspace: Update focus when a window is moved away from the current desktop

If a focussed window is to a new virtual desktop we need to update focus. It
does not make sense for focus to remain on a now-invisible window. This patch
re-uses the same path as when virtual desktop is changed.

BUG: 481574