autotests/integration/kwinbindings_test.cpp
@@ -238,10 +238,17 @@ void KWinBindingsTest::testWindowToDesktop()
     invokeShortcut(desktop);
     QVERIFY(desktopsChangedSpy.wait());
     QCOMPARE(window->desktops(), QList<VirtualDesktop *>{desktops.at(desktop - 1)});
+
+    // window to Desktop does not change the current desktop, change it manually
+    VirtualDesktopManager::self()->setCurrent(desktops.at(desktop - 1));
+
     // back to desktop 1
     invokeShortcut(1);
     QVERIFY(desktopsChangedSpy.wait());
     QCOMPARE(window->desktops(), QList<VirtualDesktop *>{desktops.at(0)});
+
+    VirtualDesktopManager::self()->setCurrent(desktops.at(0));
+
     // invoke with one desktop too many
     invokeShortcut(desktop + 1);
     // that should fail
